--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">First activity</string>
+    <string name="MGGlasses">MG Glasses</string>
+    <!-- Other string values -->
 </resources>
